将证书文件放到ignore里面

--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,4 @@ ca_conf/rest/msp/keystore/
 ca_conf/ordererca/msp/keystore/
 ca_conf/fish/msp/keystore/
 fabric-fish/
+org_crypto_conf/organizations/
